# Lab_23_2_notCopypaste

./: CMakeLists.txt  FileState.cpp  FileState.h  FileStateObservable.cpp  FileStateObservable.h  FileStateObservable.tpp  FileStateObserver.cpp  FileStateObserver.h  NotificationData.cpp  NotificationData.h  Observable.cpp  Observable.h  Observer.cpp  Observer.h  main.cpp  readme.txt
